--- a/documentation/integrations.mdx
+++ b/documentation/integrations.mdx
@@ -1,43 +1,320 @@
-### Integrations overview
+---
+title: "Integrations"
+description: "Connect your stores to major delivery channels and third-party platforms with Lula Commerce's comprehensive integration ecosystem."
+---
 
-Lula connects your stores to major delivery channels so you can manage one catalog and menu and sell everywhere. Below is a high‑level view of what each integration supports. Details vary by partner and region, but the workflows are similar.
+## Integrations Overview
 
-### DoorDash
+Lula connects your stores to major delivery channels so you can **manage one catalog and menu** and sell everywhere. Below is a high-level view of what each integration supports. Details vary by partner and region, but the workflows are similar.
 
-- Menu sync: publish items, prices, and availability
-- Store settings: hours, tax, and fees alignment
-- Orders: receive, accept, cancel, and update status
-- Inventory: mark items or modifiers out of stock
+<Info>
+With Lula's unified approach, you configure once and reach customers across all major platforms without managing multiple integrations separately.
+</Info>
 
-### Uber Eats
+## Delivery Channel Integrations
 
-- Menu sync: categories, items, options, and pricing
-- Store settings: hours and service availability
-- Orders: receive, accept, cancel, and update status
-- Inventory: item availability updates
+<Accordion title="Major Delivery Platforms">
+    <ResponseField name="DoorDash" type="integration">
+        **Complete marketplace integration with full feature support**
+        
+        - **Menu sync**: Publish items, prices, and availability
+        - **Store settings**: Hours, tax, and fees alignment  
+        - **Orders**: Receive, accept, cancel, and update status
+        - **Inventory**: Mark items or modifiers out of stock
+        
+        <Note>Most comprehensive integration with real-time inventory management</Note>
+    </ResponseField>
+    
+    <ResponseField name="Uber Eats" type="integration">
+        **Full-featured integration with advanced menu management**
+        
+        - **Menu sync**: Categories, items, options, and pricing
+        - **Store settings**: Hours and service availability
+        - **Orders**: Receive, accept, cancel, and update status  
+        - **Inventory**: Item availability updates
+        
+        <Info>Supports complex menu structures with modifiers and variants</Info>
+    </ResponseField>
+    
+    <ResponseField name="Grubhub" type="integration">
+        **Streamlined integration for essential operations**
+        
+        - **Menu sync**: Items, pricing, and schedules
+        - **Store settings**: Service hours
+        - **Orders**: Receive, accept, cancel, and update status
+        
+        <Tip>Reliable integration with focus on core functionality</Tip>
+    </ResponseField>
+    
+    <ResponseField name="Postmates/Uber" type="integration">
+        **Unified under Uber Eats platform**
+        
+        - Seamless transition from legacy Postmates integration
+        - All Uber Eats features available
+        
+        <Warning>Legacy Postmates accounts migrated to Uber Eats</Warning>
+    </ResponseField>
+</Accordion>
 
-### Grubhub
+## Lula Direct Platform
 
-- Menu sync: items, pricing, and schedules
-- Store settings: service hours
-- Orders: receive, accept, cancel, and update status
+**Lula's direct-to-consumer experience** for your website or app. Use it to offer delivery or pickup without a marketplace middleman.
 
-### LulaDirect
+<CardGroup cols={2}>
+    <Card title="Embedded Storefronts" icon="store">
+        **White-label ordering experience**
+        - Customizable branding and styling
+        - Mobile-responsive design
+        - Seamless checkout process
+    </Card>
+    
+    <Card title="Developer SDKs" icon="code">
+        **Build custom experiences**
+        - JavaScript/React components
+        - Mobile app integration
+        - API-first architecture
+    </Card>
+</CardGroup>
 
-Lula’s direct‑to‑consumer experience for your website or app. Use it to offer delivery or pickup without a marketplace middleman.
+<Accordion title="Lula Direct Features">
+    <ResponseField name="Unified Catalog" type="feature">
+        **Catalog and pricing from Lula**
+        
+        Same products, prices, and availability as delivery channels
+        
+        <Info>Ensures consistency across all customer touchpoints</Info>
+    </ResponseField>
+    
+    <ResponseField name="Order Management" type="feature">
+        **Orders and status updates** flow through the same queue
+        
+        Unified order management regardless of channel origin
+        
+        <Note>Reduces operational complexity with single order interface</Note>
+    </ResponseField>
+    
+    <ResponseField name="Payment Processing" type="feature">
+        **Integrated payment solutions**
+        
+        Support for major payment providers and methods
+        
+        <Tip>Secure, PCI-compliant payment processing built-in</Tip>
+    </ResponseField>
+</Accordion>
 
-- Embedded storefronts and SDKs
-- Unified catalog and pricing from Lula
-- Orders and status updates flow through the same queue
+## Third-Party Platform Integrations
 
-### Integration checklist
+<CardGroup cols={3}>
+    <Card title="Inventory & Back Office" icon="warehouse">
+        **POS and Inventory Systems**
+        - PDI Technologies
+        - SSCS Back-Office System
+        - ADD Systems
+        - Conexxus Standards
+    </Card>
+    
+    <Card title="Payment Processors" icon="credit-card">
+        **Secure Payment Solutions**
+        - Stripe
+        - Square
+        - PayPal
+        - Amazon Pay
+    </Card>
+    
+    <Card title="Additional Channels" icon="globe">
+        **Expanding Marketplace**
+        - Amazon delivery services
+        - Regional delivery platforms
+        - Custom API integrations
+    </Card>
+</CardGroup>
 
-- Decide which channels to enable per store
-- Confirm your pricing, taxes, and fees
-- Load products and build your menus in Lula
-- Connect your channels with your Lula representative
-- Publish and validate menus in each marketplace
-- Place one test order per channel and confirm fulfillment
+## Integration Workflow
 
-If you need help choosing channels or designing your rollout, we’re happy to advise based on what we see across the industry.
+Understanding the integration process helps you plan your rollout effectively:
 
+<Steps>
+    <Step title="Channel Selection">
+        **Decide which channels** to enable per store
+        
+        Consider your target market, delivery zones, and customer preferences.
+    </Step>
+    
+    <Step title="Configuration">
+        **Confirm your pricing, taxes, and fees**
+        
+        Ensure consistent pricing strategy across all channels.
+    </Step>
+    
+    <Step title="Catalog Setup">
+        **Load products and build your menus** in Lula
+        
+        Import existing catalog or create new menu structure.
+    </Step>
+    
+    <Step title="Channel Connection">
+        **Connect your channels** with your Lula representative
+        
+        Our team handles technical setup and credential management.
+    </Step>
+    
+    <Step title="Menu Validation">
+        **Publish and validate menus** in each marketplace
+        
+        Review menu appearance and pricing across all platforms.
+    </Step>
+    
+    <Step title="Testing">
+        **Place one test order per channel** and confirm fulfillment
+        
+        End-to-end testing ensures smooth operations before launch.
+    </Step>
+</Steps>
+
+<Info>
+**Need help choosing channels or designing your rollout?** We're happy to advise based on what we see across the industry.
+</Info>
+
+## Integration Capabilities by Category
+
+<Accordion title="Detailed Integration Features">
+    <ResponseField name="Menu Management" type="capability">
+        **Centralized menu control across all platforms**
+        
+        - Real-time menu synchronization
+        - Platform-specific customizations
+        - Scheduled menu changes
+        - Bulk menu operations
+        
+        <Note>Changes made once in Lula propagate to all connected channels</Note>
+    </ResponseField>
+    
+    <ResponseField name="Order Processing" type="capability">
+        **Unified order management system**
+        
+        - Real-time order reception
+        - Automated order acknowledgment
+        - Status update propagation
+        - Cancellation handling
+        
+        <Info>Single interface for orders from all channels</Info>
+    </ResponseField>
+    
+    <ResponseField name="Inventory Control" type="capability">
+        **Real-time inventory synchronization**
+        
+        - Item availability updates
+        - Modifier stock management
+        - Automatic out-of-stock handling
+        - Inventory level monitoring
+        
+        <Tip>Prevents overselling across all platforms</Tip>
+    </ResponseField>
+    
+    <ResponseField name="Financial Management" type="capability">
+        **Consolidated financial operations**
+        
+        - Unified reporting across channels
+        - Commission and fee tracking
+        - Tax calculation and compliance
+        - Settlement reconciliation
+        
+        <Warning>Financial data aggregated for simplified accounting</Warning>
+    </ResponseField>
+</Accordion>
+
+## API Integration Options
+
+For businesses requiring custom integrations or advanced functionality:
+
+<CardGroup cols={2}>
+    <Card title="RESTful APIs" icon="api" href="/api-reference">
+        **Full-featured REST APIs**
+        - Complete CRUD operations
+        - Real-time data access
+        - Webhook notifications
+        - Comprehensive documentation
+    </Card>
+    
+    <Card title="Bulk Operations" icon="upload" href="/api-reference/endpoint/upload-csv">
+        **Efficient bulk data management**
+        - CSV/JSON file uploads
+        - Batch processing
+        - Data validation
+        - Import/export tools
+    </Card>
+</CardGroup>
+
+## Integration Support
+
+<CardGroup cols={3}>
+    <Card title="Technical Documentation" icon="book" href="/api-reference">
+        Comprehensive API reference and integration guides
+    </Card>
+    
+    <Card title="Partner Program" icon="handshake">
+        Work with our team to build seamless integrations
+    </Card>
+    
+    <Card title="Developer Resources" icon="tools">
+        SDKs, testing environments, and technical support
+    </Card>
+</CardGroup>
+
+## Getting Started with Integrations
+
+<Steps>
+    <Step title="Assess Your Needs">
+        **Evaluate which integrations** will benefit your business most
+        
+        Consider your current channels, customer base, and growth plans.
+    </Step>
+    
+    <Step title="Contact Lula">
+        **Reach out to our integration team**
+        
+        We'll help you design the optimal integration strategy.
+    </Step>
+    
+    <Step title="Implementation">
+        **Follow the integration checklist**
+        
+        Our team guides you through each step of the process.
+    </Step>
+</Steps>
+
+<Info>
+**Ready to integrate?** Contact your Lula representative to start connecting your preferred channels and platforms. Our integration specialists will ensure a smooth setup process tailored to your business needs.
+</Info>
+
+## Performance and Reliability
+
+<Accordion title="Integration Performance Metrics">
+    <ResponseField name="Sync Speed" type="metric">
+        **Menu updates** propagate within 5-15 minutes across channels
+        
+        <Note>Sync times vary by platform processing speeds</Note>
+    </ResponseField>
+    
+    <ResponseField name="Order Processing" type="metric">
+        **Orders received** and processed in real-time (under 5 seconds)
+        
+        <Info>Fast order processing ensures quick customer confirmation</Info>
+    </ResponseField>
+    
+    <ResponseField name="Uptime" type="metric">
+        **99.9% integration uptime** with automatic failover
+        
+        <Tip>Resilient connections maintain service during partner outages</Tip>
+    </ResponseField>
+    
+    <ResponseField name="Error Handling" type="metric">
+        **Automatic retry logic** for failed operations
+        
+        <Warning>Smart retry mechanisms prevent data loss</Warning>
+    </ResponseField>
+</Accordion>
+
+<Note>
+**Questions about specific integrations?** Our technical team can provide detailed information about platform-specific features, limitations, and best practices. Contact us for integration consultation.
+</Note>
