--- a/documentation/lula-direct-sdk.mdx
+++ b/documentation/lula-direct-sdk.mdx
@@ -1,30 +1,405 @@
-### LulaDirect SDK
+---
+title: "Lula Direct SDK"
+description: "Build branded shopping experiences with Lula Direct SDK - offering complete control over your digital storefront while leveraging Lula's powerful commerce platform."
+---
 
-LulaDirect lets you offer a branded shopping experience on your own website or app while benefiting from the same catalog, pricing, and order orchestration that power your marketplace channels.
+## Platform Overview
 
-### When to use LulaDirect
+Lula Direct lets you offer a **branded shopping experience** on your own website or app while benefiting from the same catalog, pricing, and order orchestration that power your marketplace channels. This AI-powered, first-party ordering platform is purpose-built to help retailers take control of their digital storefronts.
 
-- You want a direct channel with no marketplace commissions
-- You want a fast way to launch web or mobile ordering
-- You want full control of branding and customer experience
+<Info>
+Unlike traditional e-commerce tools, Lula Direct takes a hands-on, outcome-driven approach to help retailers save time and cut costs while driving profitable growth.
+</Info>
 
-### What it provides
+## When to Use Lula Direct
 
-- Prebuilt storefront components for web and mobile
-- Cart, checkout, and order tracking flows
-- Real‑time item availability tied to your Lula catalog
-- Unified order queue and reporting alongside your other channels
+<CardGroup cols={2}>
+    <Card title="Direct Channel Control" icon="store">
+        **No marketplace commissions**
+        - Keep 100% of your revenue
+        - Own the customer relationship
+        - Control pricing and promotions
+    </Card>
+    
+    <Card title="Rapid Deployment" icon="rocket">
+        **Fast launch capabilities**
+        - Set up branded ordering in under a week
+        - Pre-built components and flows
+        - Minimal development overhead
+    </Card>
+    
+    <Card title="Brand Authority" icon="paintbrush">
+        **Full branding control**
+        - Custom design and styling
+        - White-label experience
+        - Your brand, your data
+    </Card>
+    
+    <Card title="Unified Operations" icon="layers">
+        **Integrated platform benefits**
+        - Same catalog across all channels
+        - Unified order management
+        - Consolidated reporting
+    </Card>
+</CardGroup>
 
-### Getting access
+## What Lula Direct Provides
 
-Ask your Lula representative for SDK access. We will provision credentials and share implementation guidance for your chosen platform (web, iOS, or Android).
+<Accordion title="Core SDK Components">
+    <ResponseField name="Prebuilt Storefront Components" type="component">
+        **Ready-to-use UI components for web and mobile**
+        
+        - Product catalog displays
+        - Category navigation
+        - Search and filtering
+        - Responsive design templates
+        
+        <Note>Customizable components that match your brand identity</Note>
+    </ResponseField>
+    
+    <ResponseField name="Cart & Checkout Flows" type="component">
+        **Complete shopping experience**
+        
+        - Shopping cart management
+        - Secure checkout process
+        - Payment processing integration
+        - Guest and member checkout options
+        
+        <Info>Optimized conversion flows with 22% average basket size increase</Info>
+    </ResponseField>
+    
+    <ResponseField name="Order Tracking" type="component">
+        **Real-time order management**
+        
+        - Order status updates
+        - Delivery tracking
+        - Customer notifications
+        - Order history access
+        
+        <Tip>Unified order queue alongside marketplace channels</Tip>
+    </ResponseField>
+    
+    <ResponseField name="Real-time Availability" type="component">
+        **Live inventory integration**
+        
+        - Item availability tied to Lula catalog
+        - Stock level synchronization
+        - Out-of-stock handling
+        - Pricing updates
+        
+        <Warning>Prevents overselling with real-time inventory management</Warning>
+    </ResponseField>
+</Accordion>
 
-### Implementation overview
+## Platform Benefits
 
-1) Configure your company and store IDs in Lula
-2) Initialize the SDK with your credentials
-3) Render the storefront components and test end‑to‑end
-4) Launch with your preferred payments and fulfillment settings
+<Steps>
+    <Step title="Cost Savings">
+        **60+ hours saved in setup**
+        
+        Lula handles menu digitization, compliance, delivery setup, and branding automatically.
+    </Step>
+    
+    <Step title="Operational Efficiency">
+        **$250K+ saved in annual labor**
+        
+        14+ AI Operators replace manual tasks across operations, finance, marketing, and support.
+    </Step>
+    
+    <Step title="Reduced Activation Costs">
+        **$10K+ saved in activation costs**
+        
+        Streamlined setup process eliminates traditional e-commerce implementation overhead.
+    </Step>
+    
+    <Step title="Enhanced Performance">
+        **22% average basket size increase**
+        
+        Personalized recommendations based on consumer behavior boost cart conversion.
+    </Step>
+</Steps>
 
-If you already manage a custom front end, you can also integrate directly with the Lula APIs for catalog, menus, and orders instead of using the SDK components.
+## Key Features
 
+<CardGroup cols={2}>
+    <Card title="Automated Compliance" icon="shield-check">
+        **Tax & regulatory compliance**
+        - Automatic tax registration and calculation
+        - Built-in ID verification for restricted products
+        - Geo-fencing for compliance requirements
+        - Automated tax filing
+    </Card>
+    
+    <Card title="Customer Data Ownership" icon="user-check">
+        **Your brand, your data**
+        - Full access to order history
+        - Customer purchasing trends
+        - Detailed customer insights
+        - First-party data collection
+    </Card>
+    
+    <Card title="Customizable Experience" icon="palette">
+        **Fully branded storefront**
+        - Embeds directly with your app
+        - Real-time menu customization
+        - Dynamic pricing control
+        - Promotional campaign management
+    </Card>
+    
+    <Card title="Loyalty Integration" icon="heart">
+        **Guest engagement tools**
+        - Integrated loyalty programs
+        - Personalized recommendations
+        - Customer retention features
+        - Engagement analytics
+    </Card>
+</CardGroup>
+
+## Getting SDK Access
+
+<Steps>
+    <Step title="Contact Lula">
+        **Request SDK access from your Lula representative**
+        
+        Our team will evaluate your requirements and business needs.
+    </Step>
+    
+    <Step title="Credential Provisioning">
+        **Receive development credentials**
+        
+        Secure API keys and SDK packages for your chosen platform.
+    </Step>
+    
+    <Step title="Implementation Guidance">
+        **Get platform-specific documentation**
+        
+        Detailed guides for web, iOS, or Android implementation.
+    </Step>
+    
+    <Step title="Technical Support">
+        **Access ongoing development support**
+        
+        Our engineering team provides guidance throughout implementation.
+    </Step>
+</Steps>
+
+<Info>
+**Platform Options**: SDK packages available for web (JavaScript/React), iOS (Swift), and Android (Kotlin/Java) development.
+</Info>
+
+## Implementation Overview
+
+<Accordion title="Setup Process">
+    <ResponseField name="Initial Configuration" type="step">
+        **Configure your company and store IDs in Lula**
+        
+        - Set up your business profile
+        - Define store locations and settings
+        - Configure catalog and menu structure
+        
+        <Note>This foundational setup enables all SDK functionality</Note>
+    </ResponseField>
+    
+    <ResponseField name="SDK Initialization" type="step">
+        **Initialize the SDK with your credentials**
+        
+        ```javascript
+        import { LulaSDK } from '@lula/direct-sdk';
+        
+        const lula = new LulaSDK({
+          apiKey: 'your-api-key',
+          storeId: 'your-store-id',
+          environment: 'production' // or 'sandbox'
+        });
+        ```
+        
+        <Info>Secure credential management with environment-specific configurations</Info>
+    </ResponseField>
+    
+    <ResponseField name="Component Integration" type="step">
+        **Render storefront components and test end-to-end**
+        
+        - Integrate catalog components
+        - Implement cart and checkout flows
+        - Test order processing
+        - Validate payment integration
+        
+        <Tip>Use sandbox environment for thorough testing before launch</Tip>
+    </ResponseField>
+    
+    <ResponseField name="Production Launch" type="step">
+        **Launch with your preferred payments and fulfillment settings**
+        
+        - Configure payment processors
+        - Set up fulfillment workflows
+        - Enable customer notifications
+        - Monitor performance metrics
+        
+        <Warning>Coordinate launch timing with your Lula representative</Warning>
+    </ResponseField>
+</Accordion>
+
+## API Integration Alternative
+
+For businesses requiring custom implementations or advanced functionality:
+
+<CardGroup cols={2}>
+    <Card title="Direct API Integration" icon="code" href="/api-reference">
+        **Custom frontend development**
+        - Full control over user experience
+        - Custom business logic implementation
+        - Advanced integration patterns
+        - Flexible architecture
+    </Card>
+    
+    <Card title="Hybrid Approach" icon="puzzle">
+        **Combine SDK and APIs**
+        - Use SDK for core functionality
+        - API integration for custom features
+        - Best of both worlds
+        - Gradual migration path
+    </Card>
+</CardGroup>
+
+<Info>
+**Custom Integration**: If you already manage a custom front end, you can integrate directly with the Lula APIs for catalog, menus, and orders instead of using the SDK components.
+</Info>
+
+## SDK Platform Support
+
+<Accordion title="Platform-Specific Implementation">
+    <ResponseField name="Web SDK" type="platform">
+        **JavaScript/React components**
+        
+        - Responsive web components
+        - Modern framework support
+        - Progressive Web App capabilities
+        - SEO-optimized rendering
+        
+        <Note>Compatible with React, Vue, Angular, and vanilla JavaScript</Note>
+    </ResponseField>
+    
+    <ResponseField name="iOS SDK" type="platform">
+        **Native iOS integration**
+        
+        - Swift package manager support
+        - SwiftUI and UIKit compatibility
+        - Apple Pay integration
+        - Push notification support
+        
+        <Info>Minimum iOS 12.0 requirement for optimal performance</Info>
+    </ResponseField>
+    
+    <ResponseField name="Android SDK" type="platform">
+        **Native Android integration**
+        
+        - Gradle dependency management
+        - Kotlin and Java support
+        - Google Pay integration
+        - Firebase Cloud Messaging support
+        
+        <Tip>Supports Android API level 21 (Android 5.0) and higher</Tip>
+    </ResponseField>
+</Accordion>
+
+## System Integrations
+
+<CardGroup cols={3}>
+    <Card title="Back-office Systems" icon="building">
+        **POS and inventory integration**
+        - Real-time stock synchronization
+        - Pricing updates
+        - Order routing
+        - Financial reconciliation
+    </Card>
+    
+    <Card title="Payment Processors" icon="credit-card">
+        **Secure payment handling**
+        - Multiple payment methods
+        - PCI compliance
+        - Fraud protection
+        - Subscription billing
+    </Card>
+    
+    <Card title="Third-party Tools" icon="plug">
+        **Extended ecosystem**
+        - Loyalty platforms
+        - Marketing automation
+        - Analytics tools
+        - Customer support systems
+    </Card>
+</CardGroup>
+
+## Performance & Reliability
+
+<Accordion title="Platform Performance">
+    <ResponseField name="Load Times" type="metric">
+        **Optimized component performance**
+        
+        Sub-second component load times with lazy loading and caching
+        
+        <Note>Performance optimized for mobile and desktop experiences</Note>
+    </ResponseField>
+    
+    <ResponseField name="Uptime" type="metric">
+        **99.9% platform availability**
+        
+        Redundant infrastructure ensures consistent service availability
+        
+        <Info>Global CDN distribution for optimal performance worldwide</Info>
+    </ResponseField>
+    
+    <ResponseField name="Scalability" type="metric">
+        **Enterprise-grade scaling**
+        
+        Handles traffic spikes and growing transaction volumes automatically
+        
+        <Tip>Auto-scaling infrastructure adapts to demand patterns</Tip>
+    </ResponseField>
+</Accordion>
+
+## Getting Started
+
+<Steps>
+    <Step title="Evaluate Requirements">
+        **Assess your technical needs and business goals**
+        
+        Determine platform requirements, integration scope, and timeline.
+    </Step>
+    
+    <Step title="Request Access">
+        **Contact your Lula representative for SDK access**
+        
+        Discuss implementation approach and receive development credentials.
+    </Step>
+    
+    <Step title="Development Setup">
+        **Initialize your development environment**
+        
+        Follow platform-specific setup guides and begin integration.
+    </Step>
+    
+    <Step title="Testing & Launch">
+        **Test thoroughly and launch your branded experience**
+        
+        Comprehensive testing followed by coordinated production deployment.
+    </Step>
+</Steps>
+
+<CardGroup cols={3}>
+    <Card title="API Documentation" icon="book" href="/api-reference">
+        Comprehensive API reference for custom integrations
+    </Card>
+    
+    <Card title="Integration Guide" icon="puzzle" href="/documentation/integrations">
+        Learn about platform integrations and capabilities
+    </Card>
+    
+    <Card title="Get Started" icon="rocket" href="/documentation/get-started">
+        Follow our step-by-step platform setup guide
+    </Card>
+</CardGroup>
+
+<Note>
+**Ready to build your branded experience?** Contact your Lula representative to get started with the SDK. Our team will provide the technical guidance and support needed to launch your direct-to-consumer channel successfully.
+</Note>
