--- a/documentation/welcome-intro.mdx
+++ b/documentation/welcome-intro.mdx
@@ -1,40 +1,306 @@
-### Welcome to Lula Commerce
+---
+title: "Welcome to Lula Commerce"
+description: "Your comprehensive guide to growing delivery sales and simplifying operations with Lula Commerce's unified platform for convenience retailers."
+---
+## Platform Overview
 
-Lula Commerce helps convenience retailers grow delivery sales and simplify operations by unifying products, menus, pricing, and orders across delivery channels like DoorDash, Uber Eats, Grubhub, and LulaDirect.
+Lula Commerce helps **convenience retailers grow delivery sales** and simplify operations by unifying products, menus, pricing, and orders across delivery channels like DoorDash, Uber Eats, Grubhub, and Lula Direct.
 
-Our platform gives you one place to manage your catalog and menus, publish changes everywhere, and see all orders in one view. Whether you run one store or hundreds, Lula is built to be simple to adopt and scale with your business.
+Our platform gives you **one place to manage your catalog and menus**, publish changes everywhere, and see all orders in one view. Whether you run one store or hundreds, Lula is built to be simple to adopt and scale with your business.
 
-### What you can do with Lula
+<Info>
+Lula Commerce acts as a single source of truth, eliminating the complexity of managing multiple delivery platforms independently while ensuring consistent customer experiences across all channels.
+</Info>
 
-- Manage your product catalog once and publish it to every channel
-- Create store menus, schedules, and availability in minutes
-- Keep prices, taxes, and fees consistent across channels
-- Receive, accept, and fulfill orders from all marketplaces in one flow
-- Run campaigns and promotions that apply everywhere
-- Track performance with consolidated reporting
+## What You Can Do with Lula
 
-### Who this documentation is for
+<CardGroup cols={2}>
+    <Card title="Unified Catalog Management" icon="database">
+        **Manage your product catalog once** and publish it to every channel
+        
+        - Central product repository
+        - Consistent data across platforms
+        - Bulk import and update capabilities
+    </Card>
+    
+    <Card title="Menu & Schedule Control" icon="calendar">
+        **Create store menus, schedules, and availability** in minutes
+        
+        - Store-specific menu configurations
+        - Time-based availability windows
+        - Channel-specific customizations
+    </Card>
+    
+    <Card title="Pricing Consistency" icon="dollar-sign">
+        **Keep prices, taxes, and fees consistent** across channels
+        
+        - Unified pricing strategy
+        - Automatic tax calculations
+        - Synchronized fee structures
+    </Card>
+    
+    <Card title="Order Management" icon="shopping-cart">
+        **Receive, accept, and fulfill orders** from all marketplaces in one flow
+        
+        - Single order queue
+        - Unified fulfillment process
+        - Real-time status updates
+    </Card>
+    
+    <Card title="Campaign Management" icon="megaphone">
+        **Run campaigns and promotions** that apply everywhere
+        
+        - Cross-channel promotions
+        - Targeted discounts
+        - Automated campaign deployment
+    </Card>
+    
+    <Card title="Performance Analytics" icon="chart-line">
+        **Track performance** with consolidated reporting
+        
+        - Unified dashboard
+        - Cross-channel insights
+        - Performance metrics
+    </Card>
+</CardGroup>
 
-- Business leaders who want a clear picture of how Lula works
-- Operators and managers who will keep products, menus, and stores up to date
-- Developers and partners who will connect systems to Lula’s APIs
+## Who This Documentation Is For
 
-This site is written for a non‑technical audience first, with optional deep links to the API reference when you need the details.
+<Accordion title="Target Audiences">
+    <ResponseField name="Business Leaders" type="audience">
+        **Decision makers who want a clear picture of how Lula works**
+        
+        - Strategic overview of platform capabilities
+        - Business value and ROI insights
+        - Implementation planning guidance
+        
+        <Note>Focus on business outcomes and operational benefits</Note>
+    </ResponseField>
+    
+    <ResponseField name="Operators & Managers" type="audience">
+        **Day-to-day users who will keep products, menus, and stores up to date**
+        
+        - Practical operational procedures
+        - Menu and catalog management
+        - Store configuration and maintenance
+        
+        <Info>Step-by-step guides for daily platform usage</Info>
+    </ResponseField>
+    
+    <ResponseField name="Developers & Partners" type="audience">
+        **Technical teams who will connect systems to Lula's APIs**
+        
+        - API documentation and integration guides
+        - Technical implementation details
+        - System integration patterns
+        
+        <Tip>Comprehensive technical reference with code examples</Tip>
+    </ResponseField>
+</Accordion>
 
-### How these docs are organized
+<Info>
+**Documentation Approach**: This site is written for a **non-technical audience first**, with optional deep links to the API reference when you need the technical details.
+</Info>
 
-- Getting Started: your first setup and key concepts
-- High‑Level Architecture: how the pieces fit together
-- Integrations: how Lula connects to DoorDash, Uber Eats, Grubhub, and LulaDirect
-- API Documentation: endpoint‑level details when you’re ready to automate
+## How These Docs Are Organized
 
-### Getting help
+<Steps>
+    <Step title="Getting Started" href="/documentation/get-started">
+        **Your first setup and key concepts**
+        
+        Essential onboarding steps to get your first store operational with Lula Commerce.
+    </Step>
+    
+    <Step title="High-Level Architecture" href="/documentation/high-level-architecture">
+        **How the pieces fit together**
+        
+        Understanding Lula's platform architecture, data flow, and core components.
+    </Step>
+    
+    <Step title="Integrations" href="/documentation/integrations">
+        **How Lula connects to delivery channels**
+        
+        Detailed information about DoorDash, Uber Eats, Grubhub, and Lula Direct integrations.
+    </Step>
+    
+    <Step title="Lula Direct SDK" href="/documentation/lula-direct-sdk">
+        **Build branded ordering experiences**
+        
+        Comprehensive guide to implementing Lula Direct for your website or mobile app.
+    </Step>
+    
+    <Step title="API Documentation" href="/api-reference">
+        **Endpoint-level details for automation**
+        
+        Complete technical reference when you're ready to integrate and automate operations.
+    </Step>
+</Steps>
 
-If you need assistance at any time:
+## Platform Benefits
 
-- Reach out to your Lula contact
-- Use the in‑product help to contact support
-- Reference the API pages linked from these guides when you need specifics
+<CardGroup cols={3}>
+    <Card title="Simplified Operations" icon="gear">
+        **Reduce operational complexity**
+        - Single interface for all channels
+        - Automated synchronization
+        - Centralized order management
+    </Card>
+    
+    <Card title="Increased Revenue" icon="trending-up">
+        **Grow your delivery business**
+        - Reach more customers
+        - Consistent brand experience
+        - Optimized pricing strategies
+    </Card>
+    
+    <Card title="Scalable Solution" icon="expand">
+        **Built to grow with you**
+        - Single store to enterprise chains
+        - Flexible integration options
+        - Robust infrastructure
+    </Card>
+</CardGroup>
 
-When you’re ready, continue to Getting Started to set up your first store.
+## Key Features at a Glance
 
+<Accordion title="Platform Capabilities">
+    <ResponseField name="Catalog Service" type="feature">
+        **Central product and pricing management**
+        
+        - Product information storage
+        - Price and inventory tracking
+        - Attribute management
+        - Bulk operations support
+        
+        <Note>Single source of truth for all product data</Note>
+    </ResponseField>
+    
+    <ResponseField name="Menu Service" type="feature">
+        **Store-specific menu creation and scheduling**
+        
+        - Custom menu configurations
+        - Availability window management
+        - Channel-specific variations
+        - Automated publishing
+        
+        <Info>Flexible menu management for different store needs</Info>
+    </ResponseField>
+    
+    <ResponseField name="Order Management" type="feature">
+        **Unified order processing across all channels**
+        
+        - Real-time order reception
+        - Centralized fulfillment queue
+        - Status tracking and updates
+        - Customer notifications
+        
+        <Tip>Streamlined operations regardless of order source</Tip>
+    </ResponseField>
+    
+    <ResponseField name="Analytics & Reporting" type="feature">
+        **Comprehensive performance insights**
+        
+        - Cross-channel reporting
+        - Sales performance metrics
+        - Customer behavior analysis
+        - Operational insights
+        
+        <Warning>Data-driven decision making with consolidated analytics</Warning>
+    </ResponseField>
+</Accordion>
+
+## Getting Help
+
+When you need assistance, Lula Commerce provides multiple support channels:
+
+<CardGroup cols={3}>
+    <Card title="Your Lula Contact" icon="user">
+        **Direct access to your account team**
+        
+        Reach out to your dedicated Lula representative for personalized support and guidance.
+    </Card>
+    
+    <Card title="In-Product Help" icon="question-circle">
+        **Built-in support system**
+        
+        Use the in-product help feature to contact support directly from the platform.
+    </Card>
+    
+    <Card title="API Documentation" icon="code">
+        **Technical reference materials**
+        
+        Access detailed API documentation linked from these guides when you need technical specifics.
+    </Card>
+</CardGroup>
+
+<Info>
+**Support Philosophy**: Our support team is committed to helping you succeed with Lula Commerce, whether you need technical guidance, operational assistance, or strategic advice.
+</Info>
+
+## Success Stories
+
+<Accordion title="Customer Benefits">
+    <ResponseField name="Operational Efficiency" type="benefit">
+        **60+ hours saved in setup and ongoing management**
+        
+        Automated processes and unified workflows significantly reduce manual work
+        
+        <Note>Time savings allow focus on core business growth</Note>
+    </ResponseField>
+    
+    <ResponseField name="Cost Reduction" type="benefit">
+        **$250K+ saved annually in labor costs**
+        
+        AI-powered automation replaces manual tasks across operations
+        
+        <Info>Significant ROI through operational automation</Info>
+    </ResponseField>
+    
+    <ResponseField name="Revenue Growth" type="benefit">
+        **22% average increase in basket sizes**
+        
+        Optimized customer experiences drive higher order values
+        
+        <Tip>Enhanced customer experience translates to business growth</Tip>
+    </ResponseField>
+</Accordion>
+
+## What's Next
+
+<Steps>
+    <Step title="Explore Getting Started" href="/documentation/get-started">
+        **Begin your Lula Commerce journey**
+        
+        Follow our comprehensive setup guide to get your first store operational.
+    </Step>
+    
+    <Step title="Understand the Architecture" href="/documentation/high-level-architecture">
+        **Learn how Lula works**
+        
+        Get familiar with the platform's architecture and data flow.
+    </Step>
+    
+    <Step title="Review Integration Options" href="/documentation/integrations">
+        **Plan your channel strategy**
+        
+        Understand available integrations and choose the right channels for your business.
+    </Step>
+</Steps>
+
+<CardGroup cols={3}>
+    <Card title="Quick Start Guide" icon="rocket" href="/documentation/get-started">
+        Get up and running with your first store setup
+    </Card>
+    
+    <Card title="Platform Architecture" icon="building" href="/documentation/high-level-architecture">
+        Understand how Lula Commerce works under the hood
+    </Card>
+    
+    <Card title="API Reference" icon="book" href="/api-reference">
+        Dive into technical documentation for developers
+    </Card>
+</CardGroup>
+
+<Note>
+**Ready to get started?** When you're ready, continue to [Getting Started](/documentation/get-started) to set up your first store and begin your journey with Lula Commerce.
+</Note>
